# microservice

./: .gitignore  Jenkinsfile  README.md  clean.sh  config.yaml  main.go  openapi.yaml  runRestlerTest.sh  test.robot
api/: handler.go  server.gen.go
certs/: root_server_cert.pem  server_cert.pem  server_privkey.pem
config/: config.go
go/: Dockerfile  README.md  config.yaml  go.mod  main.go
go-echo/: Jenkinsfile  Makefile  README.md  app.proto  go.sum  main.go  oapi-codegen-config.yaml  pod.yaml  runDocker.sh
go-echo/api/: handler.go
go-echo/config/: config.go
go-echo/server/: server.go
go-echo/store/: store.go
go-echo/store/ent/: client.go  ent.go  runtime.go  thing_create.go
go-echo/store/ent/predicate/: predicate.go
go-echo/store/ent/thing/: thing.go
go-nethttp/: README.md  go.mod  go.sum  main.go
go-nethttp/config/: config.go
go-nethttp/server/: handler.go  ratelimiter.go  server.go
go-nethttp/store/: store.go
go-nethttp/store/ent/: mutation.go  thing_update.go  tx.go
go-nethttp/store/ent/enttest/: enttest.go
go-nethttp/store/ent/hook/: hook.go
go-nethttp/store/ent/runtime/: runtime.go
go-nethttp/store/ent/schema/: thing.go
go-nethttp/store/ent/thing/: where.go
go/api/: handler.go  server.gen.go
go/config/: config.go
go/server/: server.go
go/store/: store.go
go/store/ent/: thing.go  thing_delete.go  thing_query.go
go/store/ent/migrate/: schema.go
rust/: Cargo.toml  README.md  config.yaml
rust-actix-web/: Cargo.toml  README.md
rust-actix-web/src/: config.rs  main.rs  server.rs  store.rs
rust-axum/: Cargo.toml  README.md
rust-axum/src/: main.rs  server.rs
rust/src/: config.rs  main.rs  server.rs  store.rs
server/: server.go
store/: store.go
www/: index.html  script.js  style.css
