[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-governor = "0.8.0"
actix-web = { version = "4", features = ["rustls-0_23"] }
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.5.0"
rustls = "0.23"
rustls-pemfile = "2"
rusqlite = { version = "0.33.0", features = ["vtab"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
