[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0-rc.1"
axum-extra = "0.11.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.5.0"
rusqlite = { version = "0.33.0", features = ["vtab"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6.2", features = ["cors"] }
