[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0-rc.1"
axum-extra = "0.10.0-rc.1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.32.1", features = ["vtab"] }
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.5.0"
